@@ -1310,6 +1310,13 @@ Example  : pray "resurrect" body\n\r\
 By targeting the cold dead body of a compatriot, the caster can resurrect them.  Only works \
 on players.
 
+PRAYER_RETRIBUTION=<ABILITY>\
+Usage    : PRAY "RETRIBUTION"\n\r\
+Example  : pray retribution\n\r\
+Causes the caster to be filled with the power of retribution.  Anyone engaging in \
+melee combat, or who tries to touch the caster may be struck by the power for \
+additional damage.
+
 PRAYER_REVIVAL=<ABILITY>\
 Usage    : PRAY REVIVAL\n\r\
 Example  : pray revival\n\r\
