@@ -2424,3 +2424,4 @@ ruthless programmer, and sentenced to a quick death.
 28.Prop_TrashCan supports a DELAY parameter
 29.New formulas for PVP combat -- INI/Control Panel support.  The defaults basically remove level fudging.
 30.(Internal) New experiments in Fully Async sessions continues apace.  Converted Logout and Quit.
+31.New prayer: Retribution (neutral Blade Barriar for Missionaries & Shaman)
